# acrussell.com

./: .buildpacks  .gitignore  .travis.yml  Cargo.toml  Procfile  README.md  app.py  build.rs  config.yaml  index.hbs  package-lock.json  package.json  projects.yaml  requirements.txt  schema.sql  static  styles.scss  webpack.config.js  wsgi.py
blog/: 2012-04-13-blog-is-up-and-running.md  2012-04-14-what-ive-been-up-to-lately.md  2012-04-18-minor-updates-and-git.md  2012-05-08-signing-jars-doodler-and-the-file-system.md  2012-05-17-liquidity-and-elasticity.md  2012-05-23-massive-updates.md  2012-06-12-new-project.md  2012-07-11-the-importance-of-semantic-html.md  2012-08-23-summer-coming-to-a-close.md  2013-01-18-a-taste-of-scala.md  2013-06-15-website-overhaul.md  2013-08-17-iteration-in-python.md  2013-12-11-in-defense-of-ti-basic.md  2014-03-15-video-games-and-programming.md  2014-05-07-patching-vim.md
scss/: main.scss
scss/base/: _design.scss  _typography.scss
scss/components/: _all.scss  _content.scss  _navigation.scss
scss/helpers/: _config.scss  _mixins.scss
scss/layout/: _grid.scss  _header.scss
scss/pages/: _blog.scss  _home.scss  _projects.scss  _resume.scss
site/: app.py  wsgi.py
site/static/blog/: 2012-04-13-blog-is-up-and-running.mdown  2012-04-14-what-ive-been-up-to-lately.mdown
site/templates/: about.html  blog.html  resume.html
src/: blog.rs  config.rs  errors.rs  helpers.rs  lib.rs  main.rs  markdown.rs  models.rs  persistence.rs  projects.rs  routes.rs  schema.rs  serialize_url.rs  server.rs
static/blog/: 2012-04-18-minor-updates-and-git.mdown  2012-05-17-liquidity-and-elasticity.mdown  2012-05-23-massive-updates.mdown  2012-06-12-new-project.mdown  2012-08-23-summer-coming-to-a-close.mdown  2013-01-18-a-taste-of-scala.mdown  2013-06-15-website-overhaul.mdown
static/js/: github_snippets.js  navbar.js
static/styles/: base.css  resume.css  slideshow.css
templates/: 404.html  about.hbs  base.hbs  blog.hbs  blog_post.hbs  footer.hbs  header.hbs  index.hbs  index.html  not_found.hbs  projects.hbs  projects.html  resume.hbs  summaries.hbs
templates/layout/: base.html  header.html
website/: __init__.py  app.py  assets.py  blog.py  config.py  projects.py  views.py
website/static/blog/: 2012-04-13-blog-is-up-and-running.md  (+14 more)
website/templates/: about.html  blog.html  blog_post.html  index.html  not_found.html  post_summaries.html  projects.html  resume.html  webstart.jnlp
(+35 files in other folders)
