[package]
authors = ["arussell123@gmail.com"]
build = "build.rs"
name = "website"
version = "0.1.0"

[[bin]]
name = "website"
path = "src/main.rs"
doc = false

[dependencies]
ammonia = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
derive-error-chain = "0.11"
diesel = { version = "0.16", features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.16", features = ["sqlite"] }
dotenv = "0.10"
dotenv_macros = "0.10"
env_logger = "0.4"
error-chain = "0.11"
handlebars-iron = "0.25"
hoedown = "6"
hubcaps = "0.3"
hyper = "0.10"
hyper-native-tls = "0.2"
iron = "0.5"
log = "0.3.5"
mount = "0.3"
openssl-probe = "0.1"
params = "0.6"
pathdiff = "0.1"
persistent = "0.3"
r2d2 = "0.7"
r2d2-diesel = "0.16"
router = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.7"
staticfile = "0.4"
toml = "0.4"
url = "1.1"
url_serde = "0.2"

[build-dependencies]
error-chain = "0.11"
sass-rs = "0.2"

[dev-dependencies]
iron-test = "0.5"
tempfile = "2.0.0"

[features]
watch = ["handlebars-iron/watch"]
