[package]
authors = ["arussell123@gmail.com"]
edition = "2018"
name = "website"
version = "0.1.0"

[dependencies]
dotenv = "0.13.0"
dotenv_codegen = "0.11.0"
env_logger = "0.6.1"
error-chain = "0.11"
handlebars = "1.1.0"
hoedown = "6"
hubcaps = "0.5.0"
log = "0.4.6"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.7"
tokio = "0.1.19"
toml = "0.4"
url = "1.1"
url_serde = "0.2"
